@@ -5,13 +5,21 @@ APEX Boot Loader
 
 TODO:
 
+  o 2008.sep.11
+    o Images are working.  There is an open issue dealing with a source
+      image that overlaps the target memory region.  At the moment, we
+      don't handle this case at all.  Relocating the source image is a
+      substantial task and may not very general purpose considering
+      that APEX doesn't attempt to grasp the overall memory map of the
+      system.
+
   o 2008.aug.27
     o The setenv command should be able to cope with a bad flash
-    environment region by letting the user set variables in the memory
-    copy.  The user wouldn't be able to save, but variables could be
-    set.  The trouble is that erasing the flash doesn't clear the
-    error in the environment being unwritable.  Perhaps we need a
-    status which is unsaveable.
+      environment region by letting the user set variables in the
+      memory copy.  The user wouldn't be able to save, but variables
+      could be set.  The trouble is that erasing the flash doesn't
+      clear the error in the environment being unwritable.  Perhaps we
+      need a status which is unsaveable.
 
   o 2008.aug.18
     o Memtest would be nice to protect the user from testing invalid
